--- a/public/singup.html
+++ b/public/singup.html
@@ -37,7 +37,7 @@
                             </form>
                         </div>
                         <div class="card-footer">
-                            <h6 class="text-center">Já possui uma conta?<a href="signIn.html" class=""> Acessar</a></h6>
+                            <h6 class="text-center">Já possui uma conta?<a href="index.html" class=""> Acessar</a></h6>
                         </div>
                     </div>
                 </div>
